Fri Nov  4 16:31:45 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_dtoa): round to even, instead of rounding to
	  nearest.  [ruby-core:77864] [Bug #12889]

Fri Nov  4 15:31:00 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: Add compiler version message into rbconfig
	  as RbConfig::CONFIG['CC_VERSION_MESSAGE']. [Feature #12896]

Fri Nov  4 13:03:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (rb_int_digits): Fix exception message
	  [ruby-core:77502] [Bug #12815]

Fri Nov  4 10:51:16 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/pathname/pathname.c (path_hash): fix unnormalized Fixnum
	  value bug on mingw/mswin.

Fri Nov  4 10:35:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::Entry_#copy): ensure that the
	  source entry exists first, to fix error for non-existent entry.
	  [ruby-core:77885] [Bug #12892]

Thu Nov  3 21:45:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c: Import changes from ruby/bigdecimal
	  repository.

Thu Nov  3 15:01:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c: include sys/sysmacros.h for ArchLinux which deprecated
	  use of major() and minor() in sys/types.h.

Wed Nov  2 08:45:49 2016  Dmitry Gritsay  <unseductable@gmail.com>

	* doc/extension.rdoc: set ANYARGS as arguments for func1 and func2.

	* doc/extension.rdoc: mention the exception object which is passed
	  to func2 as the second argument.  [Fix GH-1471]

Wed Nov  2 07:34:27 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (rb_num_coerce_bit): enable bit operations with
	  coercing by non-integer object.  [ruby-core:77783] [Bug #12875]

Tue Nov  1 01:31:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_func_round): round(3) in x86_64-w64-mingw32
	  is not accurate in an edge case.  [ruby-core:77794] [Bug #12878]

Mon Oct 31 17:36:04 2016  Code Ahss  <aycabta@gmail.com>

	* test/test_forwardable.rb (TestForwardable#test_on_private_method):