@@ -1,3 +1,9 @@
+Fri Nov  4 17:52:44 2016  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (heap_page_resurrect): do not return tomb_pages when
+	  page->freelist == NULL.
+	  [Bug #12670]
+
 Fri Nov  4 16:31:45 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* util.c (ruby_dtoa): round to even, instead of rounding to
